add new feature

--- a/config/config.json
+++ b/config/config.json
@@ -25,12 +25,22 @@
           "manifest": "./src/webparts/getDocLib/GetDocLibWebPart.manifest.json"
         }
       ]
+    },
+    "employee-crud-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/employeeCrud/EmployeeCrudWebPart.js",
+          "manifest": "./src/webparts/employeeCrud/EmployeeCrudWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {},
   "localizedResources": {
     "PnPjsExampleWebPartStrings": "lib/webparts/pnPjsExample/loc/{locale}.js",
     "EmployeeDetailWebPartStrings": "lib/webparts/employeeDetail/loc/{locale}.js",
-    "GetDocLibWebPartStrings": "lib/webparts/getDocLib/loc/{locale}.js"
+    "GetDocLibWebPartStrings": "lib/webparts/getDocLib/loc/{locale}.js",
+    "EmployeeCrudWebPartStrings": "lib/webparts/employeeCrud/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
